...

    <!-- TABS -->
    <string name="tab_info">Informations</string>
    <string name="tab_participants">Participants</string>

    <!-- ADD NEW MEETING TEXTS -->
    <string name="add_new_meeting_title" translatable="false">Créer une nouvelle réunion :</string>
    <string name="add_new_title_txt" translatable="false">Sujet :</string>
    <string name="add_new_title_input" translatable="false">Entrez le sujet de la réunion</string>
    <string name="add_new_time_txt" translatable="false">Heure :</string>
    <string name="add_new_date_txt">Date :</string>
    <string name="add_new_place_txt" translatable="false">Salle :</string>
    <string name="add_new_participants_txt" translatable="false">Participants :</string>
    <string name="add_new_participants_input" translatable="false">E-mail</string>
    <string name="participant_resume_zero" translatable="false">Encore personne ici !</string>

    <!-- STRING FOR BUTTONS -->
    <string name="add_new_participants_btn" translatable="false">Ajouter</string>
    <string name="cancel_new_meeting_btn" translatable="false">Annuler</string>
    <string name="confirm_new_meeting_btn" translatable="false">Confirmer</string>

    <!-- ARRAY FOR PLACES SPINNER -->
    <string-array name="place_spinner_meeting">
        <item>@string/place_spinner_mario</item>
        <item>@string/place_spinner_luigi</item>
        <item>@string/place_spinner_peach</item>
...
