<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/action_filter"
            android:icon="@drawable/ic_filter_list_white_24dp"
            android:title="@string/filter_icon"
            app:showAsAction="ifRoom" />

</menu>
